--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,9 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 text-align : centre >Login page</h1>
+    <br>
+    <br>
+
     <form  method="POST" action="/login">
-        <input placeholder="username" name="username">
-        <input type="password" placeholder="password" name="password">
+        <p>Name:  </p>
+        <input placeholder="username" name="username"><br>
+
+       <p>password</p>
+        <input type="password" placeholder="password" name="password"> <br>
         <input type="submit">
 
     </form>
