--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,11 +6,21 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>signup page</h1>
+     <br>
+     <br>
+
       <form  method="POST" action="/signup">
+      <p>enter  First Name:</p>
        <input placeholder="First Name" name="firstName">
-       <input placeholder="Last Name"  name ="lastName">
-        <input placeholder="username" name="username">
+       <p>   enter lastName:   </p>
+
+       <input placeholder="Last Name"  name ="lastName"><br>
+       <P>Enter UserName:   </P>
+        <input placeholder="username" name="username"><br>
+        <p>Enter Password:  </p>
         <input type="password" placeholder="password" name="password">
+        <br>
         <input type="submit">
 
     </form>
